--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: azurecli
   author: andrelohmann
   description: ansible galaxy role to install azure cli
   company: smartformer UG
