--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,25 +15,58 @@
     - lsb-release
     - gnupg
 
+- set_fact:
+    ansible_distribution: Ubuntu
+    when: 
+    - ansible_distribution == "Linux Mint"
+
+- set_fact:
+    ansible_distribution_release: "bionic"
+    when: (ansible_facts['ansible_distribution_release'] == "tessa") or
+          (ansible_facts['ansible_distribution_release'] == "tricia") or
+          (ansible_facts['ansible_distribution_release'] == "tina") or
+          (ansible_facts['ansible_distribution_release'] == "tara") or
+          (ansible_facts['ansible_distribution_release'] == "hera") or
+          (ansible_facts['ansible_distribution_release'] == "juno")
+
+- set_fact:
+    ansible_distribution_release: "focal"
+    when: (ansible_facts['ansible_distribution_release'] == "ulyana") or
+          (ansible_facts['ansible_distribution_release'] == "ulyssa") or
+          (ansible_facts['ansible_distribution_release'] == "uma") or
+          (ansible_facts['ansible_distribution_release'] == "una") or
+          (ansible_facts['ansible_distribution_release'] == "odin")
+
+- set_fact:
+    ansible_distribution_release: "jammy"
+    when: (ansible_facts['ansible_distribution_release'] == "vanessa")
+
 - name: Add Microsoft key
   apt_key:
     url: https://packages.microsoft.com/keys/microsoft.asc
+    keyring: /etc/apt/trusted.gpg.d/microsoft.gpg
     state: present
 
 - name: install microsoft repo
   apt_repository:
-    repo: "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main"
+    repo: "deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/microsoft.gpg] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main"
     state: present
     filename: azure-cli
+    update_cache: no
   when: ansible_distribution == 'Ubuntu'
 
-- name: install microsoft repo
-  apt_repository:
-    repo: "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ bionic main"
-    state: present
-    filename: azure-cli
-  when: ansible_distribution == 'Linux Mint'
+# - name: install microsoft repo
+#   apt_repository:
+#     repo: "deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/microsoft.gpg] https://packages.microsoft.com/repos/azure-cli/ bionic main"
+#     state: present
+#     filename: azure-cli
+#     update_cache: no
+#   when: ansible_distribution == 'Linux Mint'
   
+- name: apt-get update
+  shell: apt-get update
+  ignore_errors: true
+
 - name: install azure-cli
   apt:
     name: azure-cli
